--- a/bulk-wf/Snakefile
+++ b/bulk-wf/Snakefile
@@ -37,7 +37,7 @@ final_targets = utils.flatten((
     utils.flatten(c.targets['featurecounts_intergenic']) +
     utils.flatten(c.targets['rrna']),
     utils.flatten(c.targets['markduplicates']),
-    utils.flatten(c.targets['salmon']),
+#     utils.flatten(c.targets['salmon']),
     utils.flatten(c.targets['dupradar']),
     utils.flatten(c.targets['preseq']),
     utils.flatten(c.targets['rseqc']),
@@ -68,12 +68,18 @@ if 'orig_filename' in c.sampletable.columns:
         """
         input: [_st.loc[sample, 'orig_filename']  for sample in _st.index ]
         output: [c.patterns['fastq'].format(sample=sample, sample_dir=c.sample_dir) for sample in _st.index]
+        resources:
+            mem_gb = lambda wildcards, attempt: attempt * 1,
+            time_hr = lambda wildcards, attempt: attempt * 1
         run:
             for i, o in zip(input, output):
                 utils.make_relative_symlink(i, o)
 
     rule symlink_targets:
         input: c.targets['fastq']
+        resources:
+            mem_gb = lambda wildcards, attempt: attempt * 1,
+            time_hr = lambda wildcards, attempt: attempt * 1
 
 if 'Run' in c.sampletable.columns and sum(c.sampletable['Run'].str.startswith('SRR')) > 1:
 
@@ -84,6 +90,9 @@ if 'Run' in c.sampletable.columns and sum(c.sampletable['Run'].str.startswith('S
     rule fastq_dump:
         output:
             c.patterns['fastq']
+        resources:
+            mem_gb = lambda wildcards, attempt: attempt * 1,
+            time_hr = lambda wildcards, attempt: attempt * 1
         run:
             srr = _st.loc[wildcards.sample, 'Run']
             shell(
@@ -137,7 +146,6 @@ rule hisat2_splice_site:
     resources:
       mem_gb=lambda wildcards, attempt: attempt * 1,
       time_hr=lambda wildcards, attempt: attempt * 1
-    conda: "config/conda.yaml"
     shell: "hisat2_extract_splice_sites.py {input.gtf} > {output}"
 
 
@@ -343,6 +351,9 @@ rule libsizes_table:
     output:
         json=c.patterns['libsizes_yaml'],
         tsv=c.patterns['libsizes_table']
+    resources:
+        mem_gb = lambda wildcards, attempt: attempt * 1,
+        time_hr = lambda wildcards, attempt: attempt * 2
     run:
         def sample(f):
             return os.path.basename(os.path.dirname(f))
@@ -399,7 +410,7 @@ rule multiqc:
             utils.flatten(c.targets['featurecounts']) +
             utils.flatten(c.targets['bam']) +
             utils.flatten(c.targets['markduplicates']) +
-            utils.flatten(c.targets['salmon']) +
+            #utils.flatten(c.targets['salmon']) +
             utils.flatten(c.targets['rseqc']) +
             utils.flatten(c.targets['fastq_screen']) +
             utils.flatten(c.targets['dupradar']) +
@@ -627,6 +638,9 @@ rule symlink_bigwigs:
     output:
         sense=c.patterns['bigwig']['sense'],
         antisense=c.patterns['bigwig']['antisense'],
+    resources:
+        mem_gb = lambda wildcards, attempt: attempt * 1,
+        time_hr = lambda wildcards, attempt: attempt * 1
     run:
         # NOTE:
         #    In our test data, reads mapping to the positive strand correspond
@@ -715,7 +729,6 @@ rule featurecounts_intergenic:
     resources:
         mem_gb = lambda wildcards, attempt: attempt * 1,
         time_hr = lambda wildcards, attempt: attempt * 2
-    conda: "config/conda.yaml"
     shell:
         'featureCounts '
         '-{wildcards.stranded} '
@@ -751,6 +764,9 @@ if 'merged_bigwigs' in config:
             chromsizes=refdict[c.assembly][config['aligner']['tag']]['chromsizes'],
         output:
             c.patterns['merged_bigwig']
+        resources:
+            mem_gb = lambda wildcards, attempt: attempt * 1,
+            time_hr = lambda wildcards, attempt: attempt * 2
         wrapper:
             wrapper_for('average-bigwigs')
 
