--- a/bulk-wf/config/config.yaml
+++ b/bulk-wf/config/config.yaml
@@ -8,10 +8,10 @@ sampletable: 'config/sampletable.tsv'
 # directory and fastq file[s]. If `sampletable` lists a sample with samplename
 # SAMPLE1, then at least the file $sample_dir/SAMPLE1/SAMPLE1_R1.fastq.gz is
 # expected.
-sample_dir: 'data/rnaseq_samples'
+sample_dir: '../output/bulk-wf/rnaseq_samples'
 
 # Directory to contain reports and other aggregations
-aggregation_dir: 'data/aggregation'
+aggregation_dir: '../output/bulk-wf/aggregation'
 
 # Which key in the `references` dict below to use
 assembly: 'dmel'
